tests/emitzig/Smoke.zig

// generated by emitzig
// module: Smoke
const std = @import("std");
const lean_object = extern struct {
    m_rc: i32,
    m_cs_sz: u16,
    m_other: u8,
    m_tag: u8,
};
const LeanObj = ?*align(1) lean_object;
const MainFn = *const fn (c_int, [*c][*c]u8) callconv(.c) LeanObj;

extern fn lean_alloc_object(sz: usize) callconv(.c) LeanObj;
extern fn lean_ctor_set(o: LeanObj, i: c_uint, v: LeanObj) callconv(.c) void;
extern fn lean_ctor_release(o: LeanObj, i: c_uint) callconv(.c) void;
extern fn lean_ctor_set_usize(o: LeanObj, i: c_uint, v: usize) callconv(.c) void;
extern fn lean_ctor_get_usize(o: LeanObj, i: c_uint) callconv(.c) usize;
extern fn lean_ctor_get_uint8(o: LeanObj, offset: c_uint) callconv(.c) u8;
extern fn lean_ctor_get_uint16(o: LeanObj, offset: c_uint) callconv(.c) u16;
extern fn lean_ctor_get_uint32(o: LeanObj, offset: c_uint) callconv(.c) u32;
extern fn lean_ctor_get_uint64(o: LeanObj, offset: c_uint) callconv(.c) u64;
extern fn lean_ctor_get_float(o: LeanObj, offset: c_uint) callconv(.c) f64;
extern fn lean_ctor_get_float32(o: LeanObj, offset: c_uint) callconv(.c) f32;
extern fn lean_ctor_set_uint8(o: LeanObj, offset: c_uint, v: u8) callconv(.c) void;
extern fn lean_ctor_set_uint16(o: LeanObj, offset: c_uint, v: u16) callconv(.c) void;
extern fn lean_ctor_set_uint32(o: LeanObj, offset: c_uint, v: u32) callconv(.c) void;
extern fn lean_ctor_set_uint64(o: LeanObj, offset: c_uint, v: u64) callconv(.c) void;
extern fn lean_ctor_set_float(o: LeanObj, offset: c_uint, v: f64) callconv(.c) void;
extern fn lean_ctor_set_float32(o: LeanObj, offset: c_uint, v: f32) callconv(.c) void;
extern fn lean_dec_ref_cold(o: LeanObj) callconv(.c) void;
extern fn lean_del_object(o: LeanObj) callconv(.c) void;
extern fn lean_is_exclusive(o: LeanObj) callconv(.c) bool;
extern fn lean_box_uint32(value: u32) callconv(.c) LeanObj;
extern fn lean_box_uint64(value: u64) callconv(.c) LeanObj;
extern fn lean_box_usize(value: usize) callconv(.c) LeanObj;
extern fn lean_box_float(value: f64) callconv(.c) LeanObj;
extern fn lean_box_float32(value: f32) callconv(.c) LeanObj;
extern fn lean_unbox_usize(o: LeanObj) callconv(.c) usize;
extern fn lean_unbox_uint64(o: LeanObj) callconv(.c) u64;
extern fn lean_unbox_float(o: LeanObj) callconv(.c) f64;
extern fn lean_unbox_float32(o: LeanObj) callconv(.c) f32;
extern fn lean_apply_1(f: LeanObj, a1: LeanObj) callconv(.c) LeanObj;
extern fn lean_apply_2(f: LeanObj, a1: LeanObj, a2: LeanObj) callconv(.c) LeanObj;
extern fn lean_apply_3(f: LeanObj, a1: LeanObj, a2: LeanObj, a3: LeanObj) callconv(.c) LeanObj;
extern fn lean_apply_4(f: LeanObj, a1: LeanObj, a2: LeanObj, a3: LeanObj, a4: LeanObj) callconv(.c) LeanObj;
extern fn lean_apply_n(f: LeanObj, n: c_uint, args: [*]LeanObj) callconv(.c) LeanObj;
extern fn lean_alloc_closure(fun: ?*const anyopaque, arity: c_uint, num_fixed: c_uint) callconv(.c) LeanObj;
extern fn lean_closure_set(o: LeanObj, i: c_uint, v: LeanObj) callconv(.c) void;
extern fn lean_mk_string(s: [*c]const u8) callconv(.c) LeanObj;
extern fn lean_mk_string_unchecked(s: [*c]const u8, sz: usize, len: usize) callconv(.c) LeanObj;
extern fn lean_big_usize_to_nat(n: usize) callconv(.c) LeanObj;
extern fn lean_usize_of_big_nat(a: LeanObj) callconv(.c) usize;
extern fn lean_internal_panic_out_of_memory() callconv(.c) noreturn;
extern fn lean_setup_args(argc: c_int, argv: [*c][*c]u8) callconv(.c) [*c][*c]u8;
extern fn lean_initialize() callconv(.c) void;
extern fn lean_initialize_runtime_module() callconv(.c) void;
extern fn lean_initialize_thread() callconv(.c) void;
extern fn lean_init_task_manager() callconv(.c) void;
extern fn lean_finalize_task_manager() callconv(.c) void;
extern fn lean_io_result_show_error(r: LeanObj) callconv(.c) void;
extern fn lean_io_mark_end_initialization() callconv(.c) void;
extern fn lean_run_main(main_fn: MainFn, argc: c_int, argv: [*c][*c]u8) callconv(.c) LeanObj;
extern fn exit(code: c_int) callconv(.c) noreturn;

const LeanMaxCtorTag: c_uint = @as(c_uint, 243);
const LeanMaxCtorFields: c_uint = @as(c_uint, 256);
const LeanMaxCtorScalarsSize: usize = @as(usize, 1024);
const LeanMaxSmallNat: usize = std.math.maxInt(usize) >> 1;
inline fn lean_heap_obj(o: LeanObj) *lean_object {
    return @alignCast(o.?);
}
inline fn lean_is_scalar(o: LeanObj) bool {
    return (@intFromPtr(o.?) & 1) == 1;
}
inline fn lean_unbox(o: LeanObj) usize {
    return @intFromPtr(o.?) >> 1;
}
inline fn lean_ptr_tag(o: LeanObj) u8 {
    return lean_heap_obj(o).m_tag;
}
inline fn lean_ptr_other(o: LeanObj) u8 {
    return lean_heap_obj(o).m_other;
}
inline fn lean_is_st(o: LeanObj) bool {
    return lean_heap_obj(o).m_rc > 0;
}
inline fn lean_get_rc_mt_addr(o: LeanObj) *i32 {
    return &lean_heap_obj(o).m_rc;
}
inline fn lean_is_ctor(o: LeanObj) bool {
    return @as(c_uint, lean_ptr_tag(o)) <= LeanMaxCtorTag;
}
inline fn lean_ctor_num_objs(o: LeanObj) c_uint {
    std.debug.assert(lean_is_ctor(o));
    return @as(c_uint, lean_ptr_other(o));
}
inline fn lean_ctor_obj_cptr(o: LeanObj) [*]LeanObj {
    std.debug.assert(lean_is_ctor(o));
    const bytes: [*]u8 = @ptrCast(lean_heap_obj(o));
    return @ptrCast(@alignCast(bytes + @sizeOf(lean_object)));
}
inline fn lean_set_st_header(o: LeanObj, tag: c_uint, other: c_uint) void {
    const obj = lean_heap_obj(o);
    obj.m_rc = 1;
    obj.m_tag = @as(u8, @intCast(tag));
    obj.m_other = @as(u8, @intCast(other));
    obj.m_cs_sz = 0;
}
inline fn lean_usize_mul_checked(a: usize, b: usize) usize {
    return std.math.mul(usize, a, b) catch @panic("lean_usize_mul_checked overflow");
}
inline fn lean_usize_add_checked(a: usize, b: usize) usize {
    return std.math.add(usize, a, b) catch @panic("lean_usize_add_checked overflow");
}
inline fn lean_usize_to_nat(n: usize) LeanObj {
    if (n <= LeanMaxSmallNat) {
        return lean_box(n);
    } else {
        return lean_big_usize_to_nat(n);
    }
}
inline fn lean_array_fields(o: LeanObj) [*]usize {
    const bytes: [*]u8 = @ptrCast(lean_heap_obj(o));
    return @ptrCast(@alignCast(bytes + @sizeOf(lean_object)));
}
inline fn lean_array_size(o: LeanObj) usize {
    return lean_array_fields(o)[0];
}
inline fn lean_array_cptr(o: LeanObj) [*]LeanObj {
    const bytes: [*]u8 = @ptrCast(lean_heap_obj(o));
    return @ptrCast(@alignCast(bytes + @sizeOf(lean_object) + 2 * @sizeOf(usize)));
}
inline fn lean_array_get_core(o: LeanObj, i: usize) LeanObj {
    std.debug.assert(i < lean_array_size(o));
    return lean_array_cptr(o)[i];
}
inline fn lean_alloc_array(size: usize, capacity: usize) LeanObj {
    const total = lean_usize_add_checked(@sizeOf(lean_object) + 2 * @sizeOf(usize), lean_usize_mul_checked(@sizeOf(usize), capacity));
    const o = lean_alloc_object(total);
    lean_set_st_header(o, @as(c_uint, 246), @as(c_uint, 0));
    const fields = lean_array_fields(o);
    fields[0] = size;
    fields[1] = capacity;
    return o;
}
inline fn lean_nat_le(a1: LeanObj, a2: LeanObj) bool {
    if (lean_is_scalar(a1) and lean_is_scalar(a2)) {
        return @intFromPtr(a1.?) <= @intFromPtr(a2.?);
    } else {
        return lean_nat_big_le(a1, a2);
    }
}
inline fn lean_nat_lt(a1: LeanObj, a2: LeanObj) bool {
    if (lean_is_scalar(a1) and lean_is_scalar(a2)) {
        return @intFromPtr(a1.?) < @intFromPtr(a2.?);
    } else {
        return lean_nat_big_lt(a1, a2);
    }
}
inline fn lean_inc_ref_n(o: LeanObj, n: usize) void {
    const obj = lean_heap_obj(o);
    if (lean_is_st(o)) {
        obj.m_rc += @as(i32, @intCast(n));
    } else if (obj.m_rc != 0) {
        _ = @atomicRmw(i32, lean_get_rc_mt_addr(o), .Sub, @as(i32, @intCast(n)), .monotonic);
    }
}
inline fn lean_box(n: usize) LeanObj {
    const ptr: *align(1) lean_object = @ptrFromInt((n << 1) | 1);
    return ptr;
}
inline fn lean_unsigned_to_nat(n: c_uint) LeanObj {
    return lean_usize_to_nat(@as(usize, n));
}
inline fn lean_unbox_uint32(o: LeanObj) u32 {
    if (@sizeOf(usize) == 4) {
        return lean_ctor_get_uint32(o, @as(c_uint, 0));
    } else {
        return @as(u32, @intCast(lean_unbox(o)));
    }
}
inline fn lean_io_result_mk_ok(a: LeanObj) LeanObj {
    const r = lean_alloc_ctor(@as(c_uint, 0), @as(c_uint, 1), @as(usize, 0));
    lean_ctor_set(r, @as(c_uint, 0), a);
    return r;
}
inline fn lean_io_mk_world() LeanObj {
    return lean_box(@as(usize, 0));
}
inline fn lean_obj_tag(o: LeanObj) c_uint {
    if (lean_is_scalar(o)) {
        return @as(c_uint, @intCast(lean_unbox(o)));
    } else {
        return @as(c_uint, lean_ptr_tag(o));
    }
}
inline fn lean_ctor_get(o: LeanObj, i: c_uint) LeanObj {
    std.debug.assert(i < lean_ctor_num_objs(o));
    return lean_ctor_obj_cptr(o)[@as(usize, i)];
}
inline fn lean_ctor_set_tag(o: LeanObj, new_tag: u8) void {
    std.debug.assert(@as(c_uint, new_tag) <= LeanMaxCtorTag);
    lean_heap_obj(o).m_tag = new_tag;
}
inline fn lean_inc_ref(o: LeanObj) void {
    lean_inc_ref_n(o, @as(usize, 1));
}
inline fn lean_dec_ref(o: LeanObj) void {
    const obj = lean_heap_obj(o);
    if (obj.m_rc > 1) {
        obj.m_rc -= 1;
    } else if (obj.m_rc != 0) {
        lean_dec_ref_cold(o);
    }
}
inline fn lean_inc(o: LeanObj) void {
    if (!lean_is_scalar(o)) lean_inc_ref(o);
}
inline fn lean_dec(o: LeanObj) void {
    if (!lean_is_scalar(o)) lean_dec_ref(o);
}
inline fn lean_alloc_ctor(tag: c_uint, num_objs: c_uint, scalar_sz: usize) LeanObj {
    std.debug.assert(tag <= LeanMaxCtorTag and num_objs < LeanMaxCtorFields and scalar_sz < LeanMaxCtorScalarsSize);
    const total = lean_usize_add_checked(lean_usize_add_checked(@sizeOf(lean_object), lean_usize_mul_checked(@sizeOf(usize), @as(usize, num_objs))), scalar_sz);
    const o = lean_alloc_object(total);
    lean_set_st_header(o, tag, num_objs);
    return o;
}
inline fn lean_array_get_size(a: LeanObj) LeanObj {
    return lean_box(lean_array_size(a));
}
inline fn lean_array_uget(a: LeanObj, i: usize) LeanObj {
    const r = lean_array_get_core(a, i);
    lean_inc(r);
    return r;
}
inline fn lean_array_uget_borrowed(a: LeanObj, i: usize) LeanObj {
    return lean_array_get_core(a, i);
}
inline fn lean_mk_empty_array_with_capacity(capacity: LeanObj) LeanObj {
    if (!lean_is_scalar(capacity)) lean_internal_panic_out_of_memory();
    return lean_alloc_array(@as(usize, 0), lean_unbox(capacity));
}
inline fn lean_nat_dec_le(a1: LeanObj, a2: LeanObj) u8 {
    return @intFromBool(lean_nat_le(a1, a2));
}
inline fn lean_nat_dec_lt(a1: LeanObj, a2: LeanObj) u8 {
    return @intFromBool(lean_nat_lt(a1, a2));
}
inline fn lean_uint32_to_nat(a: u32) LeanObj {
    return lean_usize_to_nat(@as(usize, a));
}
inline fn lean_uint32_add(a1: u32, a2: u32) u32 {
    return a1 +% a2;
}
inline fn lean_usize_of_nat(a: LeanObj) usize {
    if (lean_is_scalar(a)) {
        return lean_unbox(a);
    } else {
        return lean_usize_of_big_nat(a);
    }
}
inline fn lean_usize_add(a1: usize, a2: usize) usize {
    return a1 +% a2;
}
inline fn lean_usize_dec_eq(a1: usize, a2: usize) u8 {
    return @intFromBool(a1 == a2);
}
